templates/multitenant_template.yaml
---
# Source: multitenant/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-storage-services
  labels:
    name: data-storage-services
    type: shared-service
---
# Source: multitenant/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: login-services
  labels:
    name: login-services
    type: shared-service
---
# Source: multitenant/templates/namespaces.yaml
#=================== Namespace ===================
apiVersion: v1
kind: Namespace
metadata:
  name: test-from-helm-multitenant-repo
  labels:
    name: test-from-helm-multitenant-repo
    type: tenant
---
# Source: multitenant/templates/networkpolicies-infrastructure.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: infrastructure-block-ingress
  namespace: infrastructure
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infrastructure
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
  podSelector: {}
  policyTypes:
    - Ingress
---
# Source: multitenant/templates/networkpolicies.yaml
#Comments are from : https://www.openshift.com/blog/guide-to-kubernetes-ingress-network-policies

#=================== Network policies ===================
#You can use the following network policy to allow all pod-to-pod communication within a namespace:
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-from-helm-multitenant-repo-allow-namespaces
  namespace: test-from-helm-multitenant-repo
  labels:
    type: tenant
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: test-from-helm-multitenant-repo
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: DataStorageServices
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: infrastructure
    ports:
      - protocol: TCP
        port: 9090 # Prometheus
      - protocol: TCP
        port: 3100 # Loki
  egress:
  - to: # nodeLocal DNS
      - ipBlock:
          cidr: 169.254.20.10/32
      - ipBlock:
          cidr: 10.43.0.10/32
    ports:
      - port: 53
        protocol: UDP
  - to: # Kube-api
      - ipBlock:
          cidr: 10.10.16.1/32
    ports:
      - port: 443
        protocol: TCP
  - to: # Master
      - ipBlock:
          cidr: 192.168.0.6/32
      - ipBlock:
          cidr: 192.168.0.7/32
      - ipBlock:
          cidr: 192.168.0.8/32
    ports:
      - port: 6443
        protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: test-from-helm-multitenant-repo
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
